--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '21'
 
 repositories {
 	mavenCentral()
@@ -15,6 +14,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.mindrot:jbcrypt:0.4'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -25,6 +25,7 @@ test {
 
 // Define Docker-related tasks
 tasks.register('buildDocker', Exec) {
+	// Creates an executable JAR file
 	dependsOn bootJar
 	description = 'Build Docker image for the Spring Boot application'
 	group = 'docker'
