--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.datasource.initialization-mode=always
+# DataSource Configuration
+spring.datasource.url=jdbc:mysql://mysql:3306/testdb
+spring.datasource.username=testuser
+spring.datasource.password=testpassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# HikariCP Configuration
+spring.datasource.hikari.connection-timeout=30000
+
+# Additional Connection Pool Properties for Troubleshooting
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
