--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI Pipeline
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   build:
@@ -44,5 +44,38 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build and run tests
-        run: ./gradlew clean build test
+      - name: Builds
+        run: ./gradlew clean build
+
+      - name: Upload build artifacts
+        if: succes()
+        uses: actions/upload-artifacts@v2
+        with:
+          name: build-artifacts
+          path: build
+
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build  # Ensure 'build' job completes successfully before starting 'test' job
+
+    steps:
+        - name: Checkout code
+          uses: actions/checkout@v2
+
+        - name: Set up JDK 17
+          uses: actions/setup-java@v3
+          with:
+            distribution: 'zulu'
+            java-version: 17
+
+        - name: Download build artifacts
+          uses: actions/download-artifact@v2
+          with:
+            name: build-artifacts
+            path: build
+
+        - name: Run tests
+          run: ./gradlew test
+
+## Værd at overveje om man skal opdele build og test i to jobs eller pipelines
