--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - mysql-data:/var/lib/mysql
 
   demo-app:
+    image: booking-demo-app:latest
     build:
       context: .
       dockerfile: Dockerfile
