Updated controller, repo persisting, guide and build

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.testcontainers:mysql:1.17.3'
-
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.4'
 }
 
 test {
