--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,7 +3,8 @@ spring.datasource.username=testuser
 spring.datasource.password=testpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.hikari.connection-timeout=30000
+spring.jpa.properties.hibernate.format_sql=true
