--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # DataSource Configuration
-spring.datasource.url=jdbc:mysql://mysql:3306/testdb
+spring.datasource.url=jdbc:mysql://mysql:3307/testdb
 spring.datasource.username=testuser
 spring.datasource.password=testpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
@@ -15,3 +15,4 @@ spring.datasource.hikari.connection-timeout=30000
 # Additional Connection Pool Properties for Troubleshooting
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
+spring.jpa.properties.hibernate.generate_statistics=true
