--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 # DataSource Configuration
+# spring.flyway.locations=classpath:db/migration
+# spring.flyway.enabled=true
 spring.datasource.url=jdbc:mysql://mysql:3307/testdb
 spring.datasource.username=testuser
 spring.datasource.password=testpassword
