--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # DataSource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3307/testdb
 spring.datasource.username=testuser
 spring.datasource.password=testpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
